--- a/Style/main.css
+++ b/Style/main.css
@@ -884,10 +884,10 @@ body:has(.Book4:hover) .back-img {
 }
 @media (max-width: 599px) {
   .container-Books .svg-cont .box1 .button--janus::before {
-    -webkit-clip-path: path("M92.7,53.1 C78.6,68.1 37.5,66 18,54.9 C-1.5,43.8 -2.1,26.4 2.7,15.3 C7.5,4.2 20.1,-3.6 51,2.1 C81.9,7.8 106.8,39 92.7,53.1 Z");
-    clip-path: path("M92.7,53.1 C78.6,68.1 37.5,66 18,54.9 C-1.5,43.8 -2.1,26.4 2.7,15.3 C7.5,4.2 20.1,-3.6 51,2.1 C81.9,7.8 106.8,39 92.7,53.1 Z");
+    -webkit-clip-path: path("M129.78,74.34 C110.04,95.34 52.5,92.4 25.2,76.86 C-2.1,61.32 -2.94,36.96 3.78,21.42 C10.5,5.88 28.14,-5.04 71.4,2.94 C114.66,10.92 149.52,54.6 129.78,74.34 Z");
+    clip-path: path("M129.78,74.34 C110.04,95.34 52.5,92.4 25.2,76.86 C-2.1,61.32 -2.94,36.96 3.78,21.42 C10.5,5.88 28.14,-5.04 71.4,2.94 C114.66,10.92 149.52,54.6 129.78,74.34 Z");
     transition: clip-path 0.5s cubic-bezier(0.585, 2.5, 0.645, 0.55), -webkit-clip-path 0.5s cubic-bezier(0.585, 2.5, 0.645, 0.55), background 0.5s ease;
-    transform: translateX(-5vw);
+    transform: translateX(8.4vw);
   }
 }
 .container-Books .svg-cont .box1 .button--janus:hover::before {
@@ -897,10 +897,10 @@ body:has(.Book4:hover) .back-img {
 }
 @media (max-width: 599px) {
   .container-Books .svg-cont .box1 .button--janus:hover::before {
-    -webkit-clip-path: path("M92.7,53.1 C78.6,68.1 37.5,66 18,54.9 C-1.5,43.8 -2.1,26.4 2.7,15.3 C7.5,4.2 20.1,-3.6 51,2.1 C81.9,7.8 106.8,39 92.7,53.1 Z");
-    clip-path: path("M92.7,53.1 C78.6,68.1 37.5,66 18,54.9 C-1.5,43.8 -2.1,26.4 2.7,15.3 C7.5,4.2 20.1,-3.6 51,2.1 C81.9,7.8 106.8,39 92.7,53.1 Z");
+    -webkit-clip-path: path("M129.78,74.34 C110.04,95.34 52.5,92.4 25.2,76.86 C-2.1,61.32 -2.94,36.96 3.78,21.42 C10.5,5.88 28.14,-5.04 71.4,2.94 C114.66,10.92 149.52,54.6 129.78,74.34 Z");
+    clip-path: path("M129.78,74.34 C110.04,95.34 52.5,92.4 25.2,76.86 C-2.1,61.32 -2.94,36.96 3.78,21.42 C10.5,5.88 28.14,-5.04 71.4,2.94 C114.66,10.92 149.52,54.6 129.78,74.34 Z");
     transition: clip-path 0.5s cubic-bezier(0.585, 2.5, 0.645, 0.55), -webkit-clip-path 0.5s cubic-bezier(0.585, 2.5, 0.645, 0.55), background 0.5s ease;
-    transform: translateX(-5vw);
+    transform: translateX(8.4vw);
   }
 }
 .container-Books .svg-cont .box1 .button--janus::after {
@@ -938,13 +938,13 @@ body:has(.Book4:hover) .back-img {
   height: -moz-fit-content;
   height: fit-content;
 }
-.container-Books .svg-cont .box2 .contgallery {
+.container-Books .svg-cont .contgallery {
   display: flex;
   width: 65vw;
   height: auto;
   position: relative;
 }
-.container-Books .svg-cont .box2 .img-booksshow {
+.container-Books .svg-cont .img-booksshow {
   flex: 0 0 auto;
   width: 60vw;
   height: auto;
@@ -952,6 +952,26 @@ body:has(.Book4:hover) .back-img {
   overflow: hidden;
   border-radius: 55px;
   padding: 15px;
+}
+@media (max-width: 1920px) and (min-width: 1367px) {
+  .container-Books .svg-cont .img-booksshow {
+    width: 50vw;
+  }
+}
+@media (max-width: 1366px) and (min-width: 1024px) {
+  .container-Books .svg-cont .img-booksshow {
+    width: 30vw;
+  }
+}
+@media (max-width: 1023px) and (min-width: 768px) {
+  .container-Books .svg-cont .img-booksshow {
+    width: 20vw;
+  }
+}
+@media (max-width: 767px) {
+  .container-Books .svg-cont .img-booksshow {
+    width: 40vw;
+  }
 }
 @media (max-width: 1600px) {
   .container-Books .svg-cont .headline-galery {
