--- a/Style/main.scss
+++ b/Style/main.scss
@@ -1179,12 +1179,12 @@
 			clip-path: path("M309,177 C262,227 125,220 60,179 C-5,138 -7,84 9,51 C25,18 67,-12 170,7 C273,26 356,127 309,177 Z");
 			transition: clip-path 0.5s cubic-bezier(0.585, 2.5, 0.645, 0.55), -webkit-clip-path 0.5s cubic-bezier(0.585, 2.5, 0.645, 0.55), background 0.5s ease;
 		
-			 @media (max-width: 599px) {
-				-webkit-clip-path: path("M92.7,53.1 C78.6,68.1 37.5,66 18,54.9 C-1.5,43.8 -2.1,26.4 2.7,15.3 C7.5,4.2 20.1,-3.6 51,2.1 C81.9,7.8 106.8,39 92.7,53.1 Z");
-clip-path: path("M92.7,53.1 C78.6,68.1 37.5,66 18,54.9 C-1.5,43.8 -2.1,26.4 2.7,15.3 C7.5,4.2 20.1,-3.6 51,2.1 C81.9,7.8 106.8,39 92.7,53.1 Z");
-transition: clip-path 0.5s cubic-bezier(0.585, 2.5, 0.645, 0.55), -webkit-clip-path 0.5s cubic-bezier(0.585, 2.5, 0.645, 0.55), background 0.5s ease;
+			@media (max-width: 599px) {
+				-webkit-clip-path: path("M129.78,74.34 C110.04,95.34 52.5,92.4 25.2,76.86 C-2.1,61.32 -2.94,36.96 3.78,21.42 C10.5,5.88 28.14,-5.04 71.4,2.94 C114.66,10.92 149.52,54.6 129.78,74.34 Z");
+				clip-path: path("M129.78,74.34 C110.04,95.34 52.5,92.4 25.2,76.86 C-2.1,61.32 -2.94,36.96 3.78,21.42 C10.5,5.88 28.14,-5.04 71.4,2.94 C114.66,10.92 149.52,54.6 129.78,74.34 Z");
+				transition: clip-path 0.5s cubic-bezier(0.585, 2.5, 0.645, 0.55), -webkit-clip-path 0.5s cubic-bezier(0.585, 2.5, 0.645, 0.55), background 0.5s ease;
 
-transform: translateX(-5vw);
+transform: translateX(8.4vw);
 				
     }
 		}
@@ -1195,11 +1195,11 @@ transform: translateX(-5vw);
 			clip-path: path("M286,154 C234,192 148,201 91,183 C34,165 -21,114 11,63 C43,12 158,-11 261,8 C364,27 338,116 286,154 Z");
 		
 			@media (max-width: 599px) {
-				-webkit-clip-path: path("M92.7,53.1 C78.6,68.1 37.5,66 18,54.9 C-1.5,43.8 -2.1,26.4 2.7,15.3 C7.5,4.2 20.1,-3.6 51,2.1 C81.9,7.8 106.8,39 92.7,53.1 Z");
-clip-path: path("M92.7,53.1 C78.6,68.1 37.5,66 18,54.9 C-1.5,43.8 -2.1,26.4 2.7,15.3 C7.5,4.2 20.1,-3.6 51,2.1 C81.9,7.8 106.8,39 92.7,53.1 Z");
-transition: clip-path 0.5s cubic-bezier(0.585, 2.5, 0.645, 0.55), -webkit-clip-path 0.5s cubic-bezier(0.585, 2.5, 0.645, 0.55), background 0.5s ease;
+				-webkit-clip-path: path("M129.78,74.34 C110.04,95.34 52.5,92.4 25.2,76.86 C-2.1,61.32 -2.94,36.96 3.78,21.42 C10.5,5.88 28.14,-5.04 71.4,2.94 C114.66,10.92 149.52,54.6 129.78,74.34 Z");
+				clip-path: path("M129.78,74.34 C110.04,95.34 52.5,92.4 25.2,76.86 C-2.1,61.32 -2.94,36.96 3.78,21.42 C10.5,5.88 28.14,-5.04 71.4,2.94 C114.66,10.92 149.52,54.6 129.78,74.34 Z");
+				transition: clip-path 0.5s cubic-bezier(0.585, 2.5, 0.645, 0.55), -webkit-clip-path 0.5s cubic-bezier(0.585, 2.5, 0.645, 0.55), background 0.5s ease;
 
-				transform: translateX(-5vw);
+				transform: translateX(8.4vw);
 
 			}
 		}
@@ -1246,30 +1246,48 @@ transition: clip-path 0.5s cubic-bezier(0.585, 2.5, 0.645, 0.55), -webkit-clip-p
 			position: relative;
 			width: 100vw;
 			height: fit-content;
-			
-			
-		  
-			.contgallery {
-				
-			  display: flex;
-			  width: 65vw;
-			  height: auto;
-			  position: relative;
-			  
-			}
-		  
+		}
+		
+		.contgallery {
+			display: flex;
+			width: 65vw;
+			height: auto;
+			position: relative;
+		}
+		
+		.img-booksshow {
+			flex: 0 0 auto;
+			width: 60vw;
+			height: auto;
+			background-size: cover;
+			overflow: hidden;
+			border-radius: 55px;
+			padding: 15px;
+		}
+		
+		@media (max-width: 1920px) and (min-width: 1367px) {
 			.img-booksshow {
-			  flex: 0 0 auto;
-			  width: 60vw;
-			  height: auto;
-			  background-size: cover;
-			  overflow: hidden;
-			  border-radius: 55px ;
-				padding: 15px;
-			  } 
-			  
-			
-		  }
+				width: 50vw; // Adjust width for screens between 1920px and 1367px
+			}
+		}
+		
+		@media (max-width: 1366px) and (min-width: 1024px) {
+			.img-booksshow {
+				width: 30vw; // Adjust width for screens between 1366px and 1024px
+			}
+		}
+		
+		@media (max-width: 1023px) and (min-width: 768px) {
+			.img-booksshow {
+				width: 20vw; // Adjust width for screens between 1023px and 768px
+			}
+		}
+		
+		@media (max-width: 767px) {
+			.img-booksshow {
+				width: 40vw; // Adjust width for screens smaller than 768px
+			}
+		}
 
 	
 
