--- a/Style/main.scss
+++ b/Style/main.scss
@@ -671,17 +671,19 @@
 }
 
 .image-block {
-		bottom: -10vh; 
-		opacity: 0;
-		background-color: black;
-		z-index: 2;
-		position: relative;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		width: 26vh;
-		min-width: 26vh;
-		height: 39vh;
+    bottom: -10vh; 
+    opacity: 0;
+    background-color: black;
+    z-index: 2;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: auto;
+    height: 54vh;
+
+		
+	
 		box-shadow: 
 			0 1px 3px rgba(0,0,0,0.12), 
 			0 1px 2px rgba(0,0,0,0.24);
@@ -830,7 +832,11 @@
 	}
 
 
-
+	@media (min-width: 1920px) {
+        .image-block {
+            height: 42vh;
+        }
+    }
 
 
 
@@ -864,12 +870,30 @@
 
 /*==============================================LIVROS==========================================================*/	  
 
+
+//backgrounds
+.segredobackground .container-Books {
+	background-color: #76ABAE; // Different background color for the specific page
+}
+
+.promRouxbackground .container-Books {
+	background-color: #DEAA79; // Different background color for the specific page
+}
+.gemeabackground .container-Books {
+	background-color: #A5B68D; // Different background color for the specific page
+}
+
+.verdadebackground .container-Books {
+	background-color: #A0937D; // Different background color for the specific page
+}
+
 .container-Books {
 	overflow: hidden !important;
 	height: auto; 
 	width: 100%;
 	position: relative;
-	background-color: #76ABAE;
+	
+
 	
 	
 	.backgroundanim{
@@ -1948,6 +1972,7 @@ transform: translateX(8.8vw);
 	background-color: #31363F;
 	border-radius: 15px;
 	right: 5vw;
+	padding: 15px;
 
 	
 }
@@ -2241,17 +2266,17 @@ transform: translateX(8.8vw);
 .book {
 	pointer-events: all;
 	
-	width: 90%;
-	height: auto;
-	max-width: 50vw; 
-	max-height: 80vh;
-	min-width: 900px; 
-	aspect-ratio: 4 / 3; 
+	width: 50vw; // Set width to a percentage of the viewport width
+    height: auto; // Set height to auto to maintain aspect ratio
+    max-width: 50vw; 
+    max-height: 75vh;
+    min-width: 900px; 
+    aspect-ratio: 4 / 3; 
 
 	
 	position: absolute;
 	left: 50%;
-	top: 54%;
+	top: 55%;
 	transform: translate(-50%, -50%);
 	perspective: 1500px;
 	user-select: none;
