--- a/Style/main.css
+++ b/Style/main.css
@@ -304,9 +304,8 @@ body:has(.Book4:hover) .back-img {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 26vh;
-  min-width: 26vh;
-  height: 39vh;
+  width: 45vw;
+  height: auto;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   overflow: hidden;
@@ -490,7 +489,7 @@ body:has(.Book4:hover) .back-img {
   align-items: center;
   justify-content: center;
   width: auto;
-  height: 54vh;
+  height: 65vh;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   overflow: hidden;
@@ -1507,7 +1506,6 @@ body:has(.Book4:hover) .back-img {
   font-size: 3rem;
   font-weight: bold;
   cursor: pointer;
-  float: right;
   pointer-events: all;
 }
 @media (max-width: 599px) {
@@ -1656,6 +1654,13 @@ body:has(.Book4:hover) .back-img {
   visibility: hidden;
 }
 
+@media (max-width: 600px) {
+  .form-basin {
+    padding: 15px;
+    font-size: 11px;
+    overflow: auto;
+  }
+}
 .social-buttons {
   display: flex;
   padding-top: 2vh;
@@ -1766,7 +1771,7 @@ body:has(.Book4:hover) .back-img {
   background: #c12127;
 }
 
-@media (max-width: 1500px) {
+@media (max-width: 700px) {
   .modal-content {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -1816,6 +1821,24 @@ body:has(.Book4:hover) .back-img {
   border-radius: 25px;
 }
 
+.magnifying-glass {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 30px;
+  height: 30px;
+  background-size: contain;
+  cursor: pointer;
+  pointer-events: all;
+}
+
+@media (max-width: 767px) {
+  .magnifying-glass {
+    top: auto;
+    bottom: 10px;
+    left: 10px;
+  }
+}
 .titbookread {
   position: relative;
   top: 2vh;
@@ -1829,26 +1852,34 @@ body:has(.Book4:hover) .back-img {
 }
 
 .book {
+  z-index: 100;
   pointer-events: all;
-  width: 50vw;
-  height: auto;
-  max-width: 50vw;
-  max-height: 75vh;
-  min-width: 900px;
+  width: auto;
+  max-width: 90%;
+  max-height: 65%;
+  height: 78%;
+  box-sizing: border-box;
   aspect-ratio: 4/3;
   position: absolute;
   left: 50%;
+  overflow: hidden;
   top: 55%;
   transform: translate(-50%, -50%);
   perspective: 1500px;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+  resize: both;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 768px) {
   .book {
-    min-width: 300px;
+    max-height: 39%;
+  }
+}
+@media (max-width: 480px) {
+  .book {
+    max-height: 35%;
   }
 }
 .page {
