--- a/Style/main.scss
+++ b/Style/main.scss
@@ -428,9 +428,9 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		width: 26vh;
-		min-width: 26vh;
-		height: 39vh;
+		width: 45vw;
+		
+		height: auto;
 		box-shadow: 
 			0 1px 3px rgba(0,0,0,0.12), 
 			0 1px 2px rgba(0,0,0,0.24);
@@ -680,7 +680,7 @@
     align-items: center;
     justify-content: center;
     width: auto;
-    height: 54vh;
+    height: 65vh;
 
 		
 	
@@ -1905,6 +1905,7 @@ transform: translateX(8.8vw);
 }
 .modal-content{
 	
+	
 	padding-right: 5vw;
 	padding-left: 5vw;
 	position: relative;
@@ -1941,7 +1942,6 @@ transform: translateX(8.8vw);
 	font-size: 3rem;
 	font-weight: bold;
 	cursor: pointer;
-	float: right;
 	pointer-events: all;
 	@media (max-width: 599px) {
         top: auto;
@@ -1978,6 +1978,7 @@ transform: translateX(8.8vw);
 }
 
 .form-basin {
+	
 	height: fit-content;
 	grid-area: 2 / 3 / 4 / 4;
 	background-color:#31363F;
@@ -2101,6 +2102,13 @@ transform: translateX(8.8vw);
 
   }
 	
+  @media (max-width: 600px) {
+    .form-basin {
+        padding: 15px;
+        font-size: 11px; 
+		overflow: auto;// Adjust the font size as needed
+    }
+}
   .social-buttons {
 	display: flex;
 	padding-top: 2vh;
@@ -2193,7 +2201,7 @@ transform: translateX(8.8vw);
   }
 
 
-@media (max-width: 1500px){
+@media (max-width: 700px){
 
 	.modal-content {
 		display: grid;
@@ -2253,6 +2261,29 @@ transform: translateX(8.8vw);
 	border-radius: 25px;
 }
 
+.magnifying-glass {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 30px;
+    height: 30px;
+    background-size: contain;
+    cursor: pointer;
+    pointer-events: all;
+}
+
+@media (max-width: 767px) {
+    .magnifying-glass {
+        top: auto;
+        bottom: 10px;
+        left: 10px;
+    }
+}
+
+  
+  
+
+
 .titbookread {
 	position: relative;
 	top: 2vh;
@@ -2264,28 +2295,35 @@ transform: translateX(8.8vw);
 	margin-bottom: 20px; /* Space between title and book */
 }
 .book {
-	pointer-events: all;
-	
-	width: 50vw; // Set width to a percentage of the viewport width
-    height: auto; // Set height to auto to maintain aspect ratio
-    max-width: 50vw; 
-    max-height: 75vh;
-    min-width: 900px; 
+	z-index: 100;
+    pointer-events: all;
+	width: auto; // Set width to a percentage of the viewport width
+	max-width: 90%;
+	max-height: 65%;
+    height: 78%; // Set height to auto to maintain aspect ratio
+	box-sizing: border-box;
     aspect-ratio: 4 / 3; 
 
-	
-	position: absolute;
-	left: 50%;
-	top: 55%;
-	transform: translate(-50%, -50%);
-	perspective: 1500px;
-	user-select: none;
-  }
-  @media (max-width: 1000px){
-	.book {
-		min-width: 300px;
-	}
-  }
+    position: absolute;
+    left: 50%;
+	overflow: hidden;
+    top: 55%;
+    transform: translate(-50%, -50%);
+    perspective: 1500px;
+    user-select: none;
+	resize: both;
+}
+@media (max-width: 768px) {
+    .book {
+        max-height: 39%; // Adjust max-height for smaller screens
+    }
+}
+
+@media (max-width: 480px) {
+    .book {
+        max-height: 35%; // Adjust max-height for even smaller screens
+    }
+}
 
   
   .page {
@@ -2354,8 +2392,11 @@ transform: translateX(8.8vw);
 	left: 0;
 	background-image: linear-gradient(to right, rgba(0,0,0,.15) 0%, rgba(0,0,0,0) 10%);
 	border-radius: 2px;
+
 	
   }
+  
+
   
   .cover {
 	width: 50%;
