--- a/Style/main.css
+++ b/Style/main.css
@@ -601,27 +601,22 @@ body:has(.Book4:hover) .back-img {
   }
 }
 /*==============================================LIVROS==========================================================*/
-.segredobackground .container-Books {
-  background-color: #76ABAE;
-}
-
-.promRouxbackground .container-Books {
-  background-color: #DEAA79;
-}
-
-.gemeabackground .container-Books {
-  background-color: #A5B68D;
-}
-
-.verdadebackground .container-Books {
-  background-color: #A0937D;
-}
-
 .container-Books {
   overflow: hidden !important;
   height: auto;
   width: 100%;
   position: relative;
+}
+.container-Books .backgroundanim {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow-x: hidden !important;
+  opacity: 0.2;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 @keyframes rotate {
   0% {
