--- a/Style/main.scss
+++ b/Style/main.scss
@@ -872,20 +872,6 @@
 
 
 //backgrounds
-.segredobackground .container-Books {
-	background-color: #76ABAE; // Different background color for the specific page
-}
-
-.promRouxbackground .container-Books {
-	background-color: #DEAA79; // Different background color for the specific page
-}
-.gemeabackground .container-Books {
-	background-color: #A5B68D; // Different background color for the specific page
-}
-
-.verdadebackground .container-Books {
-	background-color: #A0937D; // Different background color for the specific page
-}
 
 .container-Books {
 	overflow: hidden !important;
@@ -896,7 +882,17 @@
 
 	
 	
-	
+	.backgroundanim{
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100vh;
+		overflow-x: hidden!important;
+		opacity: 0.2;
+		object-fit: cover;
+		
+	}
 
 	@keyframes rotate {
 		0% {
